--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,19 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d890a747",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyodbc in c:\\users\\gia.luongdo\\python\\.venv\\lib\\site-packages (5.2.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install pyodbc\n",
+    "\n",
     "import pyodbc\n",
-    "import pandas as pd\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1fe4b78f",
    "metadata": {},
    "outputs": [],
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "474acd6e",
    "metadata": {},
    "outputs": [
@@ -34,54 +44,157 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 481 entries, 0 to 480\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column                Non-Null Count  Dtype \n",
-      "---  ------                --------------  ----- \n",
-      " 0   ArtNr                 481 non-null    object\n",
-      " 1   ArtMain               481 non-null    object\n",
-      " 2   ArtSort               472 non-null    object\n",
-      " 3   ArtikelNeu            481 non-null    object\n",
-      " 4   ArtGrp                481 non-null    object\n",
-      " 5   Marke                 167 non-null    object\n",
-      " 6   ProduktKat            273 non-null    object\n",
-      " 7   Veredelung            129 non-null    object\n",
-      " 8   Produktart            481 non-null    object\n",
-      " 9   Produktgruppe         167 non-null    object\n",
-      " 10  Materialart           179 non-null    object\n",
-      " 11  Zusammensetzung       198 non-null    object\n",
-      " 12  Gender                481 non-null    object\n",
-      " 13  Grammatur             177 non-null    object\n",
-      " 14  Inhaltsmenge          481 non-null    object\n",
-      " 15  Verpackungseinheit    481 non-null    int64 \n",
-      " 16  Mindestbestellmenge   481 non-null    int64 \n",
-      " 17  Zertifikate           117 non-null    object\n",
-      " 18  Ursprungsland         380 non-null    object\n",
-      " 19  Artikel_Alternativen  138 non-null    object\n",
-      " 20  Artikel_Partner       118 non-null    object\n",
-      "dtypes: int64(2), object(19)\n",
-      "memory usage: 79.0+ KB\n",
-      "None\n"
+      "Collecting pandas\n",
+      "  Using cached pandas-2.3.0-cp311-cp311-win_amd64.whl.metadata (19 kB)\n",
+      "Collecting numpy>=1.23.2 (from pandas)\n",
+      "  Using cached numpy-2.3.1-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\gia.luongdo\\python\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\gia.luongdo\\python\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Using cached pandas-2.3.0-cp311-cp311-win_amd64.whl (11.1 MB)\n",
+      "Using cached numpy-2.3.1-cp311-cp311-win_amd64.whl (13.0 MB)\n",
+      "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
+      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
+      "\n",
+      "   ---------------------------------------- 0/4 [pytz]\n",
+      "   ---------------------------------------- 0/4 [pytz]\n",
+      "   ---------------------------------------- 0/4 [pytz]\n",
+      "   ---------------------------------------- 0/4 [pytz]\n",
+      "   ---------- ----------------------------- 1/4 [tzdata]\n",
+      "   ---------- ----------------------------- 1/4 [tzdata]\n",
+      "   ---------- ----------------------------- 1/4 [tzdata]\n",
+      "   ---------- ----------------------------- 1/4 [tzdata]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ---------------------------------------- 4/4 [pandas]\n",
+      "\n",
+      "Successfully installed numpy-2.3.1 pandas-2.3.0 pytz-2025.2 tzdata-2025.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_14936\\3271472335.py:1: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_9636\\4280539766.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(\"SELECT * FROM t_Art_MegaBase\", conn)\n"
      ]
     }
    ],
    "source": [
+    "%pip install pandas\n",
+    "\n",
+    "import pandas as pd\n",
     "df = pd.read_sql(\"SELECT * FROM t_Art_MegaBase\", conn)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "63a3a037",
    "metadata": {},
    "outputs": [
