--- a/WarehouseSpaces.ipynb
+++ b/WarehouseSpaces.ipynb
@@ -2,33 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "45266b29",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyodbc\n",
-    "import csv\n",
     "import json\n",
     "import base64\n",
     "from cryptography.fernet import Fernet\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sqlalchemy import create_engine\n",
+    "import logging\n",
+    "import os\n",
     "\n",
+    "# --- Configuration variables ---\n",
+    "SERVER = 'PFDusSQL,50432'\n",
+    "DATABASE = 'fet_test'\n",
+    "SQL_QUERY_PATH = r'\\\\V-Processes\\\\ERP_Queries\\\\SKU_Carton_4_QS.sql'\n",
+    "CSV_FILENAME = r'\\\\pfduskommi\\Promodoro.Export\\Warehouse\\SKU_Cartons_Purchase_4_QS.CSV'\n",
     "\n",
+    "# Configure logging to write to a file\n",
+    "logging.basicConfig(\n",
+    "    filename='warehouse_log.txt',\n",
+    "    filemode='a',\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s',\n",
+    "    level=logging.INFO\n",
+    ")\n",
     "\n",
-    "cipher_suite = Fernet(b'l0cD3IJGNVc4c6dArV_u8XkXMffeumPFNd4hltjoiA8=')\n",
-    "\n",
-    "# Gibt den entschlüsselten Zugang zur ERP DB zurück\n",
-    "def load_credential(file_path):\n",
-    "    with open(file_path, 'rb') as file:\n",
-    "        encrypted_data = file.read()\n",
-    "        \n",
-    "    decrypted_data = cipher_suite.decrypt(encrypted_data)\n",
-    "    credentials = json.loads(decrypted_data.decode('utf8'))\n",
-    "    \n",
-    "    return credentials['username'], credentials['password']\n",
+    "# Gibt den Zugang zur ERP DB nur aus ENV zurück\n",
+    "def load_credential():\n",
+    "    username = os.getenv('DB_USER')\n",
+    "    password = os.getenv('DB_PASSWORD')\n",
+    "    if username and password:\n",
+    "        logging.info('Credentials loaded!')\n",
+    "        return username, password\n",
+    "    else:\n",
+    "        logging.critical('DB_USER and/or DB_PASSWORD environment variables are not set!')\n",
+    "        raise EnvironmentError('DB_USER and/or DB_PASSWORD environment variables are not set!')\n",
     "\n",
     "def load_query(file_path):\n",
     "    try:\n",
@@ -36,38 +48,29 @@
     "            query = file.read()\n",
     "        return query\n",
     "    except FileNotFoundError as file_error:\n",
-    "        print(\"SQL-Datei: \",file_error)\n",
+    "        logging.error(f\"SQL-Datei: {file_error}\")\n",
     "\n",
     "try:\n",
+    "    # Einlesen der Zugangsdaten nur aus ENV\n",
+    "    username, password = load_credential()\n",
     "\n",
-    "    #key = b'wDByOLLImijDsEaiGL1gzGFsXruC_7ol1Ht5lqo='\n",
-    "    #cipher_suite = Fernet(key)\n",
-    "\n",
-    "    #\n",
-    "    # Einlesen der verschlüsselten Zugangsdaten.\n",
-    "    #\n",
-    "    credential_file = \"C:\\\\Temp\\\\fet_test_credentials.enc\"\n",
-    "    username, password = load_credential(credential_file)\n",
-    "\n",
-    "   #\n",
-    "   # Angabe des Servers und der Datenbank\n",
-    "    #\n",
-    "    server = 'PFDusSQL,50432'\n",
-    "    database = 'fet_test'\n",
-    "\n",
-    "    connection_string = f'mssql+pyodbc://{username}:{password}@{server}/{database}?driver=SQL+Server'\n",
-    "    sql_query = load_query(r'\\\\V-Processes\\\\ERP_Queries\\\\SKU_Carton_4_QS.sql')\n",
+    "    # Angabe des Servers und der Datenbank\n",
+    "    connection_string = f'mssql+pyodbc://{username}:{password}@{SERVER}/{DATABASE}?driver=SQL+Server'\n",
+    "    sql_query = load_query(SQL_QUERY_PATH)\n",
     "\n",
     "    engine = create_engine(connection_string)\n",
     "    with engine.connect() as conn:\n",
     "        df = pd.read_sql_query(sql_query, conn)\n",
-    "        csv_filename = r'\\\\pfduskommi\\Promodoro.Export\\Warehouse\\SKU_Carton_4_QS.csv'\n",
     "        df['Gewicht_kg'] = df['Gewicht_kg'].astype(str)\n",
-    "        df.to_csv(csv_filename, sep=';', index=False, encoding='utf-8-sig')\n",
+    "        df.to_csv(CSV_FILENAME, sep=';', index=False, encoding='windows-1252')\n",
+    "    logging.info('CSV export successful.')\n",
     "\n",
+    "except FileNotFoundError as fnf_error:\n",
+    "    logging.error(f\"Datei nicht gefunden: {fnf_error}\")\n",
+    "except pyodbc.Error as db_error:\n",
+    "    logging.error(f\"fehlerhafte Verbindung: {db_error}\")\n",
     "except Exception as e:\n",
-    "    print(e)\n",
-    "    x = input()"
+    "    logging.critical(f\" {e}\", exc_info=True)"
    ]
   }
  ],
