create some new files

--- a/IMPORTER_Notebook.ipynb
+++ b/IMPORTER_Notebook.ipynb
@@ -2,22 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1975025a",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_25400\\1300257503.py:27: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n",
+      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_25400\\1300257503.py:114: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  classification_df = pd.read_sql(classification_query, conn)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred: Execution failed on sql 'SELECT sku.ArtikelCode as SKU, m.Ursprungsland, t.ArtBem as name FROM t_Art_Mega_SKU sku inner join t_Art_Text_DE t on sku.ArtNr = t.ArtNr inner join t_Art_MegaBase m on sku.ArtNR = m.ArtNr WHERE Marke IN ('Corporate', 'EXCD', 'XO')': ('42000', \"[42000] [Microsoft][ODBC-Treiber für Microsoft Access] Syntaxfehler (fehlender Operator) in Abfrageausdruck 'sku.ArtNr = t.ArtNr inner join t_Art_MegaBase m on sku.ArtNR = m.ArtN'. (-3100) (SQLExecDirectW)\")\n"
+      "Data exported to C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_Neuanlage_Basis.csv\n",
+      "Data exported to C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_CLASSIFICATION_Classification_Basis.csv\n",
+      "Data exported to C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_Keyword.csv\n",
+      "Data exported to C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_EAN.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_16080\\3951950549.py:26: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_25400\\1300257503.py:227: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n",
+      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_25400\\1300257503.py:248: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n",
+      "C:\\Users\\gia.luongdo\\AppData\\Local\\Temp\\ipykernel_25400\\1300257503.py:257: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, conn)\n"
      ]
     }
@@ -47,7 +64,7 @@
     "#Reads data from the database\n",
     "def read_and_write_aku_data():\n",
     "    table_name = 't_Art_Mega_SKU'\n",
-    "    query = f\"SELECT sku.ArtikelCode as SKU, m.Ursprungsland, t.ArtBem as name FROM {table_name} sku inner join t_Art_Text_DE t on sku.ArtNr = t.ArtNr inner join t_Art_MegaBase m on sku.ArtNR = m.ArtNr WHERE Marke IN ('Corporate', 'EXCD', 'XO')\"\n",
+    "    query = f\"SELECT sku.ArtikelCode AS SKU, m.Ursprungsland, t.ArtBem AS name FROM (t_Art_Mega_SKU sku INNER JOIN t_Art_Text_DE t ON sku.ArtNr = t.ArtNr) INNER JOIN t_Art_MegaBase m ON sku.ArtNR = m.ArtNr WHERE m.Marke IN ('Corporate', 'EXCD', 'XO');\"\n",
     "    df = pd.read_sql(query, conn)\n",
     "\n",
     "    # Add columns with specified values\n",
@@ -75,30 +92,229 @@
     "    df['valid_from'] = datetime.now().strftime(\"%Y%m%d\")\n",
     "\n",
     "    # Take only first 2 characters from Ursprungsland and rename to 'country', reorder columns\n",
-    "    df['country_of_origin'] = df['country_of_origin'].str[:2]\n",
+    "    df['country_of_origin'] = df['Ursprungsland'].str[:2]\n",
     "    df = df[['SKU', 'company', 'country_of_origin', 'automatic_batch_numbering_pattern', 'batch_management', 'batch_number_range', 'batch_numbering_type', 'date_requirement', 'discountable', 'factory', 'isPi', 'isShopArticle', 'isSl', 'isSt', 'isVerifiedArticle', 'isCatalogArticle', 'unitPi', 'unitSl', 'unitSt', 'name', 'replacement_time', 'taxPi', 'taxSl', 'valid_from']]\n",
     "\n",
     "    # Write DataFrame to CSV with correct separator and columns\n",
-    "    df.to_csv(sku_basis_csv, index=False, encoding='windows-1252', sep=',')\n",
+    "    df.to_csv(sku_basis_csv, index=False, encoding='utf-8', sep=',')\n",
     "    print(f'Data exported to {sku_basis_csv}')\n",
     "    logging.info(f'Data exported to {sku_basis_csv}')\n",
     "\n",
+    "# IMPORTER_SKU_CLASSIFICATION_Merkmale_Basis\n",
+    "def read_and_write_classification_data():\n",
+    "    \"\"\"Reads classification data from the database and writes it to a CSV file.\"\"\"\n",
+    "    # Define the table name and query\n",
+    "    classification_table_name = 't_Art_MegaBase'\n",
+    "    table_name = 't_Art_Flags'\n",
+    "    classification_query = f\"\"\"\n",
+    "        SELECT\n",
+    "            sku.ArtikelCode AS SKU,\n",
+    "            m.Ursprungsland AS Ursprungsland,\n",
+    "            sku.Größe AS Größe,\n",
+    "            sku.Größenspiegel AS Größenspiegel,\n",
+    "            sku.Hauptfarbe AS Farbgruppe,\n",
+    "            sku.FarbeNeu AS Farbe,\n",
+    "            sku.isColorCombination AS zweifarbig,\n",
+    "            m.Materialart AS Fabric_Herstellung,\n",
+    "            sku.ArtSort AS sku_ArtSort,\n",
+    "            m.Produktgruppe AS product_group,\n",
+    "            m.Marke AS Marke,\n",
+    "            m.Grammatur AS Grammatur,\n",
+    "            m.Artikel_Partner AS Artikel_Partner,\n",
+    "            m.ArtSort AS ArtSort,\n",
+    "            m.Zusammensetzung AS Zusammensetzung,\n",
+    "            m.Gender AS Gender,\n",
+    "            f.flag_workwear AS workwear,\n",
+    "            f.flag_veredelung AS veredelung,\n",
+    "            f.flag_discharge AS discharge,\n",
+    "            f.flag_dtg AS dtg,\n",
+    "            f.flag_dyoj AS dyoj,\n",
+    "            f.flag_dyop AS dyop,\n",
+    "            f.flag_flock AS flock,\n",
+    "            f.flag_siebdruck AS siebdruck,\n",
+    "            f.flag_stick AS stick,\n",
+    "            f.flag_sublimation AS sublimation,\n",
+    "            f.flag_transfer AS transfer,\n",
+    "            f.flag_premium AS premium,\n",
+    "            f.flag_extras AS extras,\n",
+    "            f.flag_outdoor AS outdoor,\n",
+    "            f.flag_plussize AS oversize,\n",
+    "            f.isNoLabel AS label,\n",
+    "            f.isErw AS erw,\n",
+    "            sku.Karton_Länge as Verpackungslänge,\n",
+    "            sku.Karton_Breite as Verpackungsbreite,\n",
+    "            sku.Karton_Höhe as Verpackungshoehe,\n",
+    "            sku.EAN as EAN,\n",
+    "            sku.Produktgewicht as Produktgewicht,\n",
+    "            sku.WarenNr as WarenNr\n",
+    "        FROM (t_Art_MegaBase m\n",
+    "        INNER JOIN t_Art_Flags f ON m.ArtNr = f.ArtNr )\n",
+    "        inner join t_Art_Mega_SKU sku on m.ArtNr = sku.ArtNr\n",
+    "        WHERE m.Marke IN ('Corporate', 'EXCD', 'XO')\n",
+    "    \"\"\"\n",
+    "    classification_df = pd.read_sql(classification_query, conn)\n",
+    "\n",
+    "    # Add columns with specified values\n",
+    "    classification_df['company'] = 0\n",
+    "    classification_df['classification_system'] = 'Warengruppensystem'\n",
+    "    classification_df['product_group_superior'] = classification_df['Marke'] + '||Produktlinie||ROOT'\n",
+    "    classification_df['ArtikelCode'] = classification_df['SKU']\n",
+    "    classification_df['feature[0]'] = 'Grammatur'\n",
+    "    classification_df['feature_value[0]'] = classification_df['Grammatur']\n",
+    "    classification_df['feature[1]'] = 'Oeko_MadeInGreen'\n",
+    "    classification_df['feature_value[1]'] = ''\n",
+    "    classification_df['feature[2]'] = 'Partnerlook'\n",
+    "    classification_df['feature_value[2]'] = classification_df['Artikel_Partner'].str[:4]\n",
+    "    classification_df['feature[3]'] = 'Sortierung'\n",
+    "    classification_df['feature_value[3]'] = classification_df['ArtSort']\n",
+    "    classification_df['feature[4]'] = 'Fabric_Herstellung'\n",
+    "    classification_df['feature_value[4]'] = classification_df['Fabric_Herstellung']\n",
+    "    classification_df['feature[5]'] = 'Material'\n",
+    "    classification_df['feature_value[5]'] = classification_df['Zusammensetzung']\n",
+    "    classification_df['feature[6]'] = 'Workwear'\n",
+    "    classification_df['feature_value[6]'] = abs(classification_df['workwear'])\n",
+    "    classification_df['feature[7]'] = 'Produktlinie_Veredelung'\n",
+    "    classification_df['feature_value[7]'] = abs(classification_df['veredelung'])\n",
+    "    classification_df['feature[8]'] = 'Produktlinie_Veredelungsart_Discharge'\n",
+    "    classification_df['feature_value[8]'] = abs(classification_df['discharge'])\n",
+    "    classification_df['feature[9]'] = 'Produktlinie_Veredelungsart_DTG'\n",
+    "    classification_df['feature_value[9]'] = abs(classification_df['dtg'])\n",
+    "    classification_df['feature[10]'] = 'Produktlinie_Veredelungsart_DYOJ'\n",
+    "    classification_df['feature_value[10]'] = abs(classification_df['dyoj'])\n",
+    "    classification_df['feature[11]'] = 'Produktlinie_Veredelungsart_DYOP'\n",
+    "    classification_df['feature_value[11]'] = abs(classification_df['dyop'])\n",
+    "    classification_df['feature[12]'] = 'Produktlinie_Veredelungsart_Flock'\n",
+    "    classification_df['feature_value[12]'] = abs(classification_df['flock'])\n",
+    "    classification_df['feature[13]'] = 'Produktlinie_Veredelungsart_Siebdruck'\n",
+    "    classification_df['feature_value[13]'] = abs(classification_df['siebdruck'])\n",
+    "    classification_df['feature[14]'] = 'Produktlinie_Veredelungsart_Stick'\n",
+    "    classification_df['feature_value[14]'] = abs(classification_df['stick'])\n",
+    "    classification_df['feature[15]'] = 'Produktlinie_Veredelungsart_Sublimationsdruck'\n",
+    "    classification_df['feature_value[15]'] = abs(classification_df['sublimation'])\n",
+    "    classification_df['feature[16]'] = 'Produktlinie_Veredelungsart_Transferdruck'\n",
+    "    classification_df['feature_value[16]'] = abs(classification_df['transfer'])\n",
+    "    classification_df['feature[17]'] = 'Brand_Premium_Item'\n",
+    "    classification_df['feature_value[17]'] = abs(classification_df['premium'])\n",
+    "    classification_df['feature[18]'] = 'Extras'\n",
+    "    classification_df['feature_value[18]'] = abs(classification_df['extras'])\n",
+    "    classification_df['feature[19]'] = 'Kids'\n",
+    "    classification_df['feature_value[19]'] = 1 - abs(classification_df['erw'])\n",
+    "    classification_df['feature[20]'] = 'Outdoor'\n",
+    "    classification_df['feature_value[20]'] = abs(classification_df['outdoor'])\n",
+    "    classification_df['feature[21]'] = 'Size_Oversize'\n",
+    "    classification_df['feature_value[21]'] = abs(classification_df['oversize'])\n",
+    "    classification_df['feature[22]'] = 'Geschlecht'\n",
+    "    classification_df['feature_value[22]'] = classification_df['Gender']\n",
+    "    classification_df['feature[23]'] = 'Brand_Label'\n",
+    "    classification_df['feature_value[23]'] = abs(classification_df['label'])\n",
+    "    classification_df['feature[24]'] = 'Farbe'\n",
+    "    classification_df['feature_value[24]'] = classification_df['Farbe']\n",
+    "    classification_df['feature[25]'] = 'Farbgruppe'\n",
+    "    classification_df['feature_value[25]'] = classification_df['Farbgruppe']\n",
+    "    classification_df['feature[26]'] = 'Größe'\n",
+    "    classification_df['feature_value[26]'] = classification_df['Größe']\n",
+    "    classification_df['feature[27]'] = 'Größenspiegel'\n",
+    "    classification_df['feature_value[27]'] = classification_df['Größenspiegel']\n",
+    "    classification_df['feature[28]'] = 'Zweifarbig'\n",
+    "    classification_df['feature_value[28]'] = classification_df['zweifarbig']\n",
+    "    classification_df['feature[29]'] = 'Ursprungsland'\n",
+    "    classification_df['feature_value[29]'] = classification_df['Ursprungsland'].str[:2]\n",
+    "    classification_df['feature[30]'] = 'Verpackungslänge'\n",
+    "    classification_df['feature_value[30]'] = classification_df['Verpackungslänge']\n",
+    "    classification_df['feature[31]'] = 'Verpackungsbreite'\n",
+    "    classification_df['feature_value[31]'] = classification_df['Verpackungsbreite']\n",
+    "    classification_df['feature[32]'] = 'Verpackungshoehe'\n",
+    "    classification_df['feature_value[32]'] = classification_df['Verpackungshoehe']\n",
+    "    classification_df['feature[33]'] = 'EAN'\n",
+    "    classification_df['feature_value[33]'] = classification_df['EAN']\n",
+    "    classification_df['feature[34]'] = 'Produktgewicht'\n",
+    "    classification_df['feature_value[34]'] = classification_df['Produktgewicht']\n",
+    "    classification_df['feature[35]'] = 'Statistische Warnennummer'\n",
+    "    classification_df['feature_value[35]'] = classification_df['WarenNr']\n",
+    "    # Reorder columns\n",
+    "    feature_cols = []\n",
+    "    for i in range(36):\n",
+    "        feature_cols.extend([f'feature[{i}]', f'feature_value[{i}]'])\n",
+    "    classification_df = classification_df[\n",
+    "        ['SKU', 'company', 'classification_system', 'product_group', 'product_group_superior'] + feature_cols\n",
+    "    ]\n",
+    "\n",
+    "    # Write DataFrame to CSV (add your desired path)\n",
+    "    classification_csv = r\"C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_CLASSIFICATION_Classification_Basis.csv\"\n",
+    "    classification_df.to_csv(\n",
+    "        classification_csv,\n",
+    "        index=False,\n",
+    "        encoding='windows-1252',\n",
+    "        sep=',',\n",
+    "    )\n",
+    "    print(f'Data exported to {classification_csv}')\n",
+    "    logging.info(f'Data exported to {classification_csv}')\n",
+    "\n",
+    "#IMPORTER_SKU_Keyword\n",
+    "def read_and_write_SKU_Keyword():\n",
+    "    table_name = 't_Art_MegaBase'\n",
+    "    query = \"\"\"\n",
+    "        SELECT \n",
+    "            sku.ArtikelCode AS SKU,\n",
+    "            0 as company,\n",
+    "            t.SuchText as keyword_list,\n",
+    "            'de' as language,\n",
+    "            ',' as seperator\n",
+    "        FROM (t_Art_MegaBase m\n",
+    "        INNER JOIN t_Art_Mega_SKU sku ON m.ArtNr = sku.ArtNr)\n",
+    "        INNER JOIN t_Art_Text_DE t ON sku.ArtNr = t.ArtNr\n",
+    "        WHERE m.Marke IN ('Corporate', 'EXCD', 'XO')\n",
+    "    \"\"\"\n",
+    "    df = pd.read_sql(query, conn)\n",
+    "    Zuordnung_csv = r\"C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_Keyword.csv\"\n",
+    "    df.to_csv(Zuordnung_csv, index=False, encoding='windows-1252', sep=',')\n",
+    "    print(f'Data exported to {Zuordnung_csv}')\n",
+    "    logging.info(f'Data exported to {Zuordnung_csv}')\n",
+    "\n",
+    "#Import_SKU_EAN\n",
+    "def read_and_write_SKU_EAN():\n",
+    "    table_name = 't_Art_MegaBase'\n",
+    "    query = \"\"\"\n",
+    "        SELECT \n",
+    "            sku.ArtikelCode AS SKU,\n",
+    "            0 as company,\n",
+    "            sku.EAN as ean,\n",
+    "            'de' as language,\n",
+    "            ',' as seperator\n",
+    "        FROM (t_Art_MegaBase m\n",
+    "        INNER JOIN t_Art_Mega_SKU sku ON m.ArtNr = sku.ArtNr)\n",
+    "        INNER JOIN t_Art_Text_DE t ON sku.ArtNr = t.ArtNr\n",
+    "        WHERE m.Marke IN ('Corporate', 'EXCD', 'XO')\n",
+    "    \"\"\"\n",
+    "    df = pd.read_sql(query, conn)\n",
+    "    Zuordnung_csv = r\"C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_EAN.csv\"\n",
+    "    df.to_csv(Zuordnung_csv, index=False, encoding='windows-1252', sep=',')\n",
+    "    print(f'Data exported to {Zuordnung_csv}')\n",
+    "    logging.info(f'Data exported to {Zuordnung_csv}')\n",
+    "\n",
+    "#Link SKU and Article Basis\n",
+    "def link_sku_article_basis():\n",
+    "    query = f\"SELECT sku.ArtikelCode AS SKU, m.ArtBasis as aid, m.ArtNr as ArtNr FROM t_Art_Mega_SKU sku INNER JOIN t_Art_MegaBase m ON sku.ArtNR = m.ArtNr WHERE m.Marke IN ('Corporate', 'EXCD', 'XO');\"\n",
+    "    df = pd.read_sql(query, conn)\n",
+    "\n",
+    "    df.to_csv(r\"C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\IMPORTER_SKU_ArtBasis.csv\", index=False, encoding='windows-1252', sep=',')\n",
     "\n",
     "# Call the function to execute the logic\n",
-    "try:\n",
-    "    read_and_write_aku_data()\n",
-    "    #read_and_write_classification_data()\n",
-    "    #read_and_write_Zuordnung_Basis()\n",
-    "    #read_and_write_Schlüsselworte_Basis()\n",
-    "except Exception as e:\n",
-    "    print(f\"An error occurred: {e}\")\n",
-    "    logging.error(f\"An error occurred: {e}\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08a4130e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
