--- a/IMPORTER_Notebook.ipynb
+++ b/IMPORTER_Notebook.ipynb
@@ -3,6 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72e9961e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyodbc\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Path to the Access database file\n",
+    "mdb_file = r\"C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\db_Artikel_Export2.mdb\"\n",
+    "conn_str = (\n",
+    "    query = \"\"\"\n",
+    "SELECT \n",
+    "    m.ArtBasis AS aid,\n",
+    "    sku.ArtikelCode AS variant_aid,\n",
+    "    'classification_system' AS classification_system,\n",
+    "    'attribute[0]' AS [attribute[0]],\n",
+    "    '' AS [attribute_value[0]],\n",
+    "    '' AS [is_mandatory[0]],\n",
+    "    '' AS production_type\n",
+    "FROM t_Art_Mega_SKU sku\n",
+    "INNER JOIN t_Art_MegaBase m ON sku.ArtNr = m.ArtNr\n",
+    "WHERE m.Marke IN ('Corporate', 'EXCD', 'XO')\n",
+    "\"\"\"\n",
+    "df = pd.read_sql(query, conn)\n",
+    "    f\"DBQ={mdb_file};\"\n",
+    ")\n",
+    "\n",
+    "# Connect to Access database\n",
+    "conn = pyodbc.connect(conn_str)\n",
+    "\n",
+    "# Query data from table\n",
+    "query = \"SELECT * FROM t_Art_Mega_SKU\"\n",
+    "df = pd.read_sql(query, conn)\n",
+    "\n",
+    "# Export to CSV file\n",
+    "df.to_csv(r\"C:\\Users\\gia.luongdo\\Desktop\\ERP-Importer\\exported_data.csv\", index=False, encoding='utf-8', sep=',')\n",
+    "\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1975025a",
    "metadata": {},
    "outputs": [
