change project to modular

--- a/IMPORTER_Notebook.ipynb
+++ b/IMPORTER_Notebook.ipynb
@@ -46,6 +46,245 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16034bcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tổng số giá trị kiểm tra trong 'aid': 168\n",
+      "Số lượng giá trị trong 'AID': 173\n",
+      "\n",
+      "Các giá trị trong 'aid' KHÔNG trùng khớp với giá trị nào trong 'AID':\n",
+      "1046.0\n",
+      "1050.0\n",
+      "1051.0\n",
+      "1060.0\n",
+      "1090.0\n",
+      "110.0\n",
+      "120.0\n",
+      "1400.0\n",
+      "1410.0\n",
+      "1425.0\n",
+      "1450.0\n",
+      "1451.0\n",
+      "1460.0\n",
+      "1465.0\n",
+      "1505.0\n",
+      "1515.0\n",
+      "1525.0\n",
+      "1545.0\n",
+      "1560.0\n",
+      "1565.0\n",
+      "160.0\n",
+      "1600.0\n",
+      "1650.0\n",
+      "1680.0\n",
+      "1699.0\n",
+      "1700.0\n",
+      "1751.0\n",
+      "1781.0\n",
+      "1790.0\n",
+      "195.0\n",
+      "2049.0\n",
+      "2075.0\n",
+      "2111.0\n",
+      "2112.0\n",
+      "2180.0\n",
+      "2181.0\n",
+      "2190.0\n",
+      "2199.0\n",
+      "2899.0\n",
+      "3005.0\n",
+      "3011.0\n",
+      "3012.0\n",
+      "3025.0\n",
+      "3070.0\n",
+      "3075.0\n",
+      "3077.0\n",
+      "3081.0\n",
+      "3082.0\n",
+      "3083.0\n",
+      "3084.0\n",
+      "3085.0\n",
+      "3086.0\n",
+      "3087.0\n",
+      "3088.0\n",
+      "3089.0\n",
+      "309.0\n",
+      "3090.0\n",
+      "3095.0\n",
+      "3099.0\n",
+      "3100.0\n",
+      "311.0\n",
+      "3185.0\n",
+      "3190.0\n",
+      "3325.0\n",
+      "3400.0\n",
+      "3407.0\n",
+      "349.0\n",
+      "352.0\n",
+      "3520.0\n",
+      "3521.0\n",
+      "356.0\n",
+      "3560.0\n",
+      "3561.0\n",
+      "3580.0\n",
+      "3590.0\n",
+      "399.0\n",
+      "4000.0\n",
+      "4001.0\n",
+      "4005.0\n",
+      "4020.0\n",
+      "4025.0\n",
+      "404.0\n",
+      "4040.0\n",
+      "4081.0\n",
+      "4085.0\n",
+      "4095.0\n",
+      "4097.0\n",
+      "4099.0\n",
+      "4100.0\n",
+      "4120.0\n",
+      "4150.0\n",
+      "4250.0\n",
+      "4400.0\n",
+      "4405.0\n",
+      "4520.0\n",
+      "4525.0\n",
+      "4590.0\n",
+      "4600.0\n",
+      "4605.0\n",
+      "4900.0\n",
+      "4910.0\n",
+      "4920.0\n",
+      "5025.0\n",
+      "5050.0\n",
+      "5052.0\n",
+      "5077.0\n",
+      "508.0\n",
+      "5080.0\n",
+      "5099.0\n",
+      "518.0\n",
+      "5181.0\n",
+      "5182.0\n",
+      "5270.0\n",
+      "5275.0\n",
+      "5290.0\n",
+      "5295.0\n",
+      "5300.0\n",
+      "5390.0\n",
+      "5500.0\n",
+      "6099.0\n",
+      "6300.0\n",
+      "6305.0\n",
+      "6310.0\n",
+      "6315.0\n",
+      "6900.0\n",
+      "6905.0\n",
+      "6910.0\n",
+      "6915.0\n",
+      "7001.0\n",
+      "7200.0\n",
+      "7205.0\n",
+      "7548.0\n",
+      "7549.0\n",
+      "7621.0\n",
+      "7622.0\n",
+      "7631.0\n",
+      "7632.0\n",
+      "7634.0\n",
+      "7635.0\n",
+      "7700.0\n",
+      "7705.0\n",
+      "7720.0\n",
+      "7725.0\n",
+      "7806.0\n",
+      "7811.0\n",
+      "7820.0\n",
+      "7821.0\n",
+      "7830.0\n",
+      "7835.0\n",
+      "7840.0\n",
+      "7845.0\n",
+      "7850.0\n",
+      "7855.0\n",
+      "7860.0\n",
+      "7865.0\n",
+      "7910.0\n",
+      "7911.0\n",
+      "7921.0\n",
+      "7925.0\n",
+      "7961.0\n",
+      "7965.0\n",
+      "7971.0\n",
+      "798.0\n",
+      "7981.0\n",
+      "7985.0\n",
+      "8001.0\n",
+      "8005.0\n",
+      "8100.0\n",
+      "Tổng cộng: 168\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# --- Đọc dữ liệu ---\n",
+    "file_to_compare = r\"C:\\Users\\gia.luongdo\\Desktop\\AID_SQL_.csv\"\n",
+    "column1_name = 'aid'\n",
+    "column2_name = 'AID'\n",
+    "csv_delimiter = ','\n",
+    "\n",
+    "try:\n",
+    "    df = pd.read_csv(file_to_compare, delimiter=csv_delimiter)\n",
+    "\n",
+    "    # Kiểm tra sự tồn tại của các cột cần thiết\n",
+    "    if column1_name not in df.columns or column2_name not in df.columns:\n",
+    "        print(f\"Lỗi: Thiếu một trong hai cột '{column1_name}' hoặc '{column2_name}'. Các cột có sẵn: {df.columns.tolist()}\")\n",
+    "        raise SystemExit\n",
+    "\n",
+    "    aid_list = df[column1_name].dropna().astype(str).str.strip().tolist()\n",
+    "    AID_list = df[column2_name].dropna().astype(str).str.strip().tolist()\n",
+    "\n",
+    "    khong_trung_khop = []\n",
+    "    for aid in aid_list:\n",
+    "        if aid not in AID_list:\n",
+    "            khong_trung_khop.append(aid)\n",
+    "\n",
+    "    print(f\"Tổng số giá trị kiểm tra trong '{column1_name}': {len(aid_list)}\")\n",
+    "    print(f\"Số lượng giá trị trong '{column2_name}': {len(AID_list)}\")\n",
+    "\n",
+    "    if khong_trung_khop:\n",
+    "        print(f\"\\nCác giá trị trong '{column1_name}' KHÔNG trùng khớp với giá trị nào trong '{column2_name}':\")\n",
+    "        for v in khong_trung_khop:\n",
+    "            print(v)\n",
+    "        print(f\"Tổng cộng: {len(khong_trung_khop)}\")\n",
+    "    else:\n",
+    "        print(f\"Tất cả giá trị trong '{column1_name}' đều có trong '{column2_name}'.\")\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Lỗi: Không tìm thấy file '{file_to_compare}'.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Lỗi: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1975025a",
    "metadata": {},
    "outputs": [
